--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.weld.servlet</groupId>
+            <artifactId>weld-servlet-core</artifactId>
+            <version>6.0.0.Beta1</version>
+        </dependency>
     </dependencies>
 
     <build>
